@@ -1,3 +1,8 @@
+2008-05-13  Inge Wallin  <inge@lysator.liu.se>
+
+	Introduce d-pointer to a public class
+	* src/lib/TileCreator.{h,cpp}: d-pointerify
+
 2008-05-13  Claudiu Covaci  <claudiu.covaci@gmail.com>
 
     * src/lib/geodata/data/GeoDataColorStyle.{h,cpp}:
